--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,5 +29,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta5'
     compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.github.satyan:sugar:1.5'
     testCompile 'junit:junit:4.12'
 }
