--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".GeoMapActivity">
+        <activity android:name=".SelectProjectActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,11 +25,11 @@
         </activity>
 
         <activity android:name=".GoogleMapActivity"
-            android:parentActivityName=".GeoMapActivity" >
+            android:parentActivityName=".SelectProjectActivity" >
             <!-- The meta-data tag is required if you support API level 15 and lower -->
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".GeoMapActivity" />
+                android:value=".SelectProjectActivity" />
         </activity>
 
         <meta-data
